--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Rest Server IN6BM con conección a mongodb",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index",
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Cancinos",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.20"
   }
 }
